@@ -2,6 +2,7 @@ linux-latest-2.6 (28) UNRELEASED; urgency=low
 
   * Move NEWS from linux-2.6, since apt-listchanges only shows it for
     upgraded packages
+  * Add linux-tools-2.6 meta package
 
  -- Ben Hutchings <ben@decadent.org.uk>  Sun, 20 Jun 2010 18:02:34 +0100
 
